--- a/assets/css/scss/_contact.scss
+++ b/assets/css/scss/_contact.scss
@@ -1,3 +1,6 @@
+@use "./common" as *;
+@use "./mixin" as *;
+
 .contact__wrapper {
   background: #f6f6f6;
   width: 100%;
@@ -9,6 +12,9 @@
   width: 60%;
   margin: 0 auto;
   margin-top: 60px;
+  @include w900{
+    width: 80%;
+  }
   .required {
     color: red;
   }
