--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -483,6 +483,11 @@ img {
   -moz-column-gap: 20px;
        column-gap: 20px;
 }
+@media screen and (max-width: 599px) {
+  .banner__item {
+    height: 140px;
+  }
+}
 .banner__item a {
   display: inline-block;
   width: 100%;
@@ -1150,6 +1155,7 @@ img {
   height: 570px;
   width: 60%;
   margin: 0 auto;
+  margin-top: 24px;
 }
 @media screen and (max-width: 768px) {
   .about__video {
@@ -1365,9 +1371,14 @@ img {
   width: 100%;
   font-size: 24px;
   font-weight: 700;
-  line-height: 1.2;
-  color: #000;
+  line-height: 1.3;
+  color: #333;
   padding-top: 24px;
+}
+@media screen and (max-width: 1440px) {
+  .column__item_content {
+    font-size: 20px;
+  }
 }
 .column__item_content p {
   display: inline-block;
@@ -5889,6 +5900,230 @@ footer {
   padding: 20px 0 40px 70px;
   font-weight: 400;
   line-height: 1.2;
+}
+
+.single {
+  width: 75%;
+  margin: 0 auto;
+  margin-top: 80px;
+  margin-bottom: 60px;
+}
+@media screen and (max-width: 1024px) {
+  .single {
+    width: 100%;
+  }
+}
+@media screen and (max-width: 599px) {
+  .single {
+    margin-top: 64px;
+    margin-bottom: 40px;
+  }
+}
+.single__inner {
+  padding: 64px;
+  background: #fff;
+}
+@media screen and (max-width: 768px) {
+  .single__inner {
+    padding: 40px;
+  }
+}
+@media screen and (max-width: 599px) {
+  .single__inner {
+    padding: 24px;
+  }
+}
+.single-wrapper {
+  width: 100%;
+  height: 100%;
+  background: #f9f9f9;
+  padding: 80px;
+}
+@media screen and (max-width: 768px) {
+  .single-wrapper {
+    padding: 40px;
+  }
+}
+@media screen and (max-width: 599px) {
+  .single-wrapper {
+    padding: 24px;
+  }
+}
+.single__datecate {
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  padding-bottom: 40px;
+}
+@media screen and (max-width: 500px) {
+  .single__datecate {
+    flex-direction: column;
+    justify-content: center;
+  }
+}
+.single__datecate .single-date {
+  font-size: 20px;
+  font-weight: bold;
+  color: #419438;
+  padding-left: 8px;
+  padding-right: 12px;
+  border-right: 1px solid #333;
+}
+@media screen and (max-width: 599px) {
+  .single__datecate .single-date {
+    font-size: 18px;
+  }
+}
+@media screen and (max-width: 500px) {
+  .single__datecate .single-date {
+    border-right: none;
+  }
+}
+.single__datecate .single-cate {
+  color: #333;
+  font-size: 18px;
+  padding-left: 12px;
+  font-weight: bold;
+}
+@media screen and (max-width: 599px) {
+  .single__datecate .single-cate {
+    font-size: 16px;
+  }
+}
+@media screen and (max-width: 500px) {
+  .single__datecate .single-cate {
+    padding-top: 12px;
+  }
+}
+.single__title {
+  font-size: 40px;
+  font-weight: bold;
+  color: #333;
+  padding-bottom: 64px;
+}
+@media screen and (max-width: 768px) {
+  .single__title {
+    font-size: 32px;
+    padding-bottom: 40px;
+  }
+}
+@media screen and (max-width: 599px) {
+  .single__title {
+    font-size: 28px;
+  }
+}
+.single__text {
+  font-size: 18px;
+  line-height: 1.4;
+  color: #333;
+}
+@media screen and (max-width: 1440px) {
+  .single__text {
+    font-size: 16px;
+  }
+}
+@media screen and (max-width: 599px) {
+  .single__text {
+    font-size: 14px;
+  }
+}
+.single h2 {
+  font-size: 32px;
+  padding-bottom: 8px;
+  border-bottom: 1px solid #333;
+  line-height: 1.4;
+}
+@media screen and (max-width: 768px) {
+  .single h2 {
+    font-size: 28px;
+  }
+}
+@media screen and (max-width: 599px) {
+  .single h2 {
+    font-size: 24px;
+  }
+}
+.single h3 {
+  font-size: 24px;
+  padding-bottom: 8px;
+  border-bottom: 1px solid #333;
+  line-height: 1.4;
+}
+.single ul {
+  line-height: 2;
+  padding-left: 20px;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  list-style-type: disc;
+}
+.single hr {
+  padding-bottom: 16px;
+}
+.single a {
+  display: block;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  color: rgb(60, 140, 220);
+}
+.single a:hover {
+  opacity: 0.8;
+}
+.single img {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+.single .wp-block-heading {
+  padding-top: 24px;
+  margin-bottom: 12px;
+}
+
+.post-link {
+  width: 75%;
+  padding-left: 2%;
+  padding-right: 2%;
+  margin: 0 auto;
+  font-size: 24px;
+  color: #333;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+@media screen and (max-width: 1440px) {
+  .post-link {
+    font-size: 20px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .post-link {
+    font-size: 18px;
+  }
+}
+@media screen and (max-width: 599px) {
+  .post-link {
+    font-size: 16px;
+  }
+}
+.post-link a {
+  position: relative;
+  border-bottom: 1px solid transparent; /* 透明なborderを初期設定 */
+}
+.post-link a:hover {
+  opacity: 0.8;
+}
+.post-link a:hover::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 0; /* 初期状態では幅0 */
+  height: 1px;
+  background-color: rgb(104, 104, 104);
+  animation: border-stretch 0.2s linear forwards;
+}
+@keyframes border-stretch {
+  to {
+    width: 100%; /* アニメーション終了時の幅 */
+  }
 }
 
 body {
