--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -13,6 +13,7 @@
 @use "./scss/dream-call-next";
 @use "./scss/trial";
 @use "./scss/site-design";
+@use "./scss/single";
 
 body{
     font-family: "Noto sans JP";
