--- a/assets/css/scss/_top.scss
+++ b/assets/css/scss/_top.scss
@@ -200,6 +200,9 @@
     justify-content: center;
     align-items: center;
     column-gap: 20px;
+    @include w599{
+      height: 140px;
+    }
     a {
       display: inline-block;
       width: 100%;
@@ -771,6 +774,7 @@ padding-bottom: 60px;
     height: 570px;
     width: 60%;
     margin: 0 auto;
+    margin-top: 24px;
 @include w768{
   width: 80%;
   height: 450px;
@@ -955,9 +959,12 @@ display: none;
       width: 100%;
       font-size: 24px;
       font-weight: 700;
-      line-height: 1.2;
-      color: #000;
+      line-height: 1.3;
+      color: #333;
       padding-top: 24px;
+      @include w1440{
+        font-size: 20px;
+      }
       p{
         display: inline-block;
       }
