--- a/assets/css/scss/_hamburger.scss
+++ b/assets/css/scss/_hamburger.scss
@@ -166,8 +166,14 @@
       align-items: center;
       justify-content: center;
       border: 2px solid #3a3e40;
-      border-radius: 30px;
+      border-radius: 40px;
+      transition: background-color 0.3s ease-in-out;
+      border: 2px solid #3a3e40;
       font-weight: bold;
+      &:hover {
+        background-color: #3a3e40;
+        color: #fff;
+      }
       @include w500 {
         padding: 25px 90px;
         font-size: 16px;
@@ -179,9 +185,15 @@
       justify-content: center;
       padding: 25px 160px;
       background: #6bb42d;
-      border-radius: 30px;
+      border-radius: 40px;
       color: #fff;
       font-weight: bold;
+      border: 2px solid #6bb42d;
+      transition: background-color 0.3s ease-in-out;
+      &:hover {
+        background: #fff;
+        color: #6bb42d;
+      }
       @include w500 {
         padding: 25px 110px;
         font-size: 16px;
