--- a/assets/css/scss/_header.scss
+++ b/assets/css/scss/_header.scss
@@ -38,6 +38,12 @@ header {
         font-size: 16px;
         font-weight: bold;
         margin-left: 1rem;
+        br{
+          display: none;
+          @include w599{
+            display: block;
+          }
+        }
       }
     }
     &__right {
