--- a/assets/css/scss/_top.scss
+++ b/assets/css/scss/_top.scss
@@ -200,6 +200,10 @@
     justify-content: center;
     align-items: center;
     column-gap: 20px;
+    transition: all .1s;
+    &:hover{
+      opacity: 0.7;
+    }
     @include w599{
       height: 140px;
     }
