--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,6 +42,14 @@ header .header__left h1 {
   font-weight: bold;
   margin-left: 1rem;
 }
+header .header__left h1 br {
+  display: none;
+}
+@media screen and (max-width: 599px) {
+  header .header__left h1 br {
+    display: block;
+  }
+}
 header .header__right {
   font-size: 14px;
   display: flex;
@@ -482,6 +490,10 @@ img {
   align-items: center;
   -moz-column-gap: 20px;
        column-gap: 20px;
+  transition: all 0.1s;
+}
+.banner__item:hover {
+  opacity: 0.7;
 }
 @media screen and (max-width: 599px) {
   .banner__item {
@@ -3134,8 +3146,14 @@ footer {
   align-items: center;
   justify-content: center;
   border: 2px solid #3a3e40;
-  border-radius: 30px;
+  border-radius: 40px;
+  transition: background-color 0.3s ease-in-out;
+  border: 2px solid #3a3e40;
   font-weight: bold;
+}
+.menu__btns_simu:hover {
+  background-color: #3a3e40;
+  color: #fff;
 }
 @media screen and (max-width: 500px) {
   .menu__btns_simu {
@@ -3149,9 +3167,15 @@ footer {
   justify-content: center;
   padding: 25px 160px;
   background: #6bb42d;
-  border-radius: 30px;
+  border-radius: 40px;
   color: #fff;
   font-weight: bold;
+  border: 2px solid #6bb42d;
+  transition: background-color 0.3s ease-in-out;
+}
+.menu__btns_contact:hover {
+  background: #fff;
+  color: #6bb42d;
 }
 @media screen and (max-width: 500px) {
   .menu__btns_contact {
@@ -6124,6 +6148,164 @@ footer {
   to {
     width: 100%; /* アニメーション終了時の幅 */
   }
+}
+
+.column-page {
+  width: 100%;
+  height: 100%;
+  background: #f9f9f9;
+}
+.column-page__inner {
+  padding: 120px 10% 60px;
+}
+@media screen and (max-width: 1200px) {
+  .column-page__inner {
+    padding: 120px 6% 60px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .column-page__inner {
+    padding: 120px 2% 60px;
+  }
+}
+.column-page__inner h1 {
+  font-size: 56px;
+  font-weight: 700;
+  color: #333;
+  padding-bottom: 64px;
+}
+@media screen and (max-width: 1200px) {
+  .column-page__inner h1 {
+    padding-left: 64px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .column-page__inner h1 {
+    font-size: 46px;
+  }
+}
+@media screen and (max-width: 599px) {
+  .column-page__inner h1 {
+    font-size: 40px;
+  }
+}
+.column-page__inner .column__items {
+  padding-left: 16px;
+  padding-right: 16px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+}
+@media screen and (max-width: 1024px) {
+  .column-page__inner .column__items {
+    justify-content: space-between;
+  }
+}
+@media screen and (max-width: 660px) {
+  .column-page__inner .column__items {
+    flex-direction: column;
+    align-items: center;
+    gap: 0;
+    row-gap: 32px;
+  }
+}
+.column-page__inner .column__items .column__item {
+  width: 31%;
+  background: #fff;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
+}
+@media screen and (max-width: 1024px) {
+  .column-page__inner .column__items .column__item {
+    width: 45%;
+  }
+}
+@media screen and (max-width: 768px) {
+  .column-page__inner .column__items .column__item {
+    width: 48%;
+  }
+}
+@media screen and (max-width: 660px) {
+  .column-page__inner .column__items .column__item {
+    width: 85%;
+  }
+}
+@media screen and (max-width: 599px) {
+  .column-page__inner .column__items .column__item {
+    width: 95%;
+  }
+}
+.column-page__inner .column__items .column__item_inner {
+  padding: 40px;
+}
+.column-page__inner .column__items .column__item_title {
+  padding-top: 16px;
+  color: #333;
+}
+.column-page__inner .column__items .column__item_title a {
+  display: inline;
+  line-height: 1.5;
+  font-size: 18px;
+  border-bottom: 1px solid #333;
+}
+@media screen and (max-width: 660px) {
+  .column-page__inner .column__items .column__item_title a {
+    font-size: 15px;
+  }
+}
+.column-page__inner .column__items .column__item_title a:hover {
+  opacity: 0.8;
+}
+.column-page__inner .column__items .column__item .datecate {
+  display: flex;
+  align-items: center;
+  justify-content: start;
+}
+.column-page__inner .column__items .column__item .datecate .date {
+  font-size: 12px;
+  font-weight: bold;
+  color: #419438;
+  padding-left: 8px;
+  padding-right: 12px;
+  border-right: 1px solid #333;
+}
+.column-page__inner .column__items .column__item .datecate .cate {
+  color: #333;
+  font-size: 12px;
+  padding-left: 12px;
+  font-weight: bold;
+}
+.column-page .prev {
+  display: none;
+}
+.column-page .next {
+  display: none;
+}
+
+.pagenation {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  -moz-column-gap: 12px;
+       column-gap: 12px;
+  padding-top: 32px;
+}
+.pagenation .page-numbers {
+  padding: 10px 15px;
+  border-radius: 50%;
+  border: #333 1px solid;
+  transition: all 0.1s;
+}
+.pagenation .page-numbers:hover {
+  background: #333;
+  color: #fff;
+}
+.pagenation .dots {
+  border: none;
+  pointer-events: none;
+}
+.pagenation .current {
+  opacity: 0.4;
+  pointer-events: none;
 }
 
 body {
