--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -14,6 +14,7 @@
 @use "./scss/trial";
 @use "./scss/site-design";
 @use "./scss/single";
+@use "./scss/column";
 
 body{
     font-family: "Noto sans JP";
