--- a/assets/css/scss/_common.scss
+++ b/assets/css/scss/_common.scss
@@ -1,4 +1,4 @@
-@use './mixin' as *;
+@use "./mixin" as *;
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;500;700;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Lato&display=swap");
 
@@ -7,7 +7,7 @@
   font-weight: bold;
   text-align: center;
   font-size: 24px;
-  @include w1440{
+  @include w1440 {
     font-size: 20px;
   }
 }
@@ -18,7 +18,7 @@
   font-weight: 900;
   font-size: 48px;
   padding-top: 20px;
-  @include w1440{
+  @include w1440 {
     font-size: 40px;
   }
 }
@@ -29,50 +29,77 @@ img {
   object-fit: cover;
 }
 
-.page-title{
+.page-title {
   max-width: 1280px;
   margin: 0 auto;
   text-align: left;
   line-height: 1.6;
   padding-top: 140px;
   padding-left: 80px;
-  @include w1440{
+  @include w1440 {
     padding-top: 100px;
   }
-  @include w599{
-    text-align: center;
-    padding-left: 0;
+  @include w768{
+    padding-top: 80px;
   }
-  h2{
+  @include w450 {
+    padding-left: 40px;
+  }
+  h2 {
     font-size: 72px;
     font-weight: 900;
     color: #111111;
-    @include w1440{
+    @include w1440 {
       font-size: 64px;
     }
-    @include w900{
+    @include w900 {
       font-size: 56px;
     }
-    @include w660{
+    @include w660 {
       font-size: 48px;
     }
-    @include w500{
+    @include w500 {
       font-size: 42px;
     }
   }
-  p{
+  p {
     font-weight: 700;
     font-size: 24px;
     color: #333;
-    @include w1440{
+    @include w1440 {
       font-size: 20px;
     }
-    @include w660{
+    @include w660 {
       font-size: 18px;
     }
   }
 }
 
-
-.animoShine{display:inline-block;z-index:1;position:relative;font-size:inherit;font-family:inherit;color:#fff;padding:.5em 1em;outline:0;border:none;background-color:#f39c12;overflow:hidden;cursor:pointer}.animoShine::after{content:'';z-index:-1;background-color:hsla(0,0%,100%,.2);position:absolute;top:-50%;bottom:-50%;width:1.25em;transform:translate3d(-1000%,0,0) rotate(35deg)}.animoShine:hover::after{transition:transform .45s ease-in-out;transform:translate3d(200%,0,0) rotate(35deg)}
-      
+.animoShine {
+  display: inline-block;
+  z-index: 1;
+  position: relative;
+  font-size: inherit;
+  font-family: inherit;
+  color: #fff;
+  padding: 0.5em 1em;
+  outline: 0;
+  border: none;
+  background-color: #f39c12;
+  overflow: hidden;
+  cursor: pointer;
+}
+.animoShine::after {
+  content: "";
+  z-index: -1;
+  background-color: hsla(0, 0%, 100%, 0.2);
+  position: absolute;
+  top: -50%;
+  bottom: -50%;
+  width: 1.25em;
+  transform: translate3d(-1000%, 0, 0) rotate(35deg);
+}
+.animoShine:hover::after {
+  transition: transform 0.45s ease-in-out;
+  transform: translate3d(200%, 0, 0) rotate(35deg);
+}
